# ticket-assist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.config/: README.md  black.toml  pylintrc  pylintrc_tests  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: lint.yml  publish_to_pypi.yml  tests.yml
slack_bot/: __init__.py  app.py  functions.py  user_id.py
tests/: conftest.py
tests/slack_bot/: test_app.py  test_functions.py  test_user_id.py
